--- a/.travis.yml
+++ b/.travis.yml
@@ -1,68 +1,27 @@
 language: node_js
 
 node_js:
-    - "4.1"
-    #- "4.0"
-    #- "0.12"
-    #- "0.11"
-    #- "0.10"
-
-
+    - "14"
 
 sudo: false
-
-
 
 git:
     submodules: false
 
-
-
-addons:
-    apt:
-        packages:
-            #- php-codesniffer
-            #- phpmd
-            #- shellcheck
-
-
-
 before_script:
-
     # Install validation tools
-    - npm install -g htmlhint jshint jscs html-minifier@0.8.0 less less-plugin-clean-css uglify-js
-
-
+    - make install
 
 script:
-    # Check versions of validation tools
-    - node --version
-    - npm --version
-    
-    - htmlhint --version
-    - lessc --version
-    - jscs --version
-    - jshint --version
-    #- phpcs --version
-    #- phpmd --version
-    #- jsonlint --version
-    #- js-yaml --version
-    #- shellcheck --version
-    
-    #- html-minifier --version
-    #- cleancss --version
-    - uglifyjs --version
-    
     # Run tests
+    - make build
+    - make bundle
     - make test
 
-
 notifications:
-    irc: "irc.freenode.org#dbwebb"
-
     webhooks:
         urls:
-            - https://webhooks.gitter.im/e/fbf84c2c6009351f1b39
+            - https://webhooks.gitter.im/e/3a86d311166c7f6df3ec
 
         # options: [always|never|change] default: always
         on_success: change
