--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "html-slideshow",
-  "version": "1.0.0",
-  "description": "Standalone HTML slideshow using JavaScript framework Mithril",
+  "version": "1.1.0",
+  "description": "Standalone HTML slideshow using Markdown",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -18,6 +18,8 @@
     "Markdown",
     "slide",
     "slideshow",
+    "presentation",
+    "syntax highlightning",
     "mithril"
   ],
   "author": "Mikael Roos",
